fix alignment of close button label

--- a/src/scss/_project-nav.scss
+++ b/src/scss/_project-nav.scss
@@ -30,6 +30,11 @@
       --button-color: #{color.invert(color.invert($color-text))};
       --button-background-color: #{$color-white};
     }
+
+    .button--label {
+      position: relative;
+      transform: translateY(-0.6px);
+    }
   }
 
   &--title {
